--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSO
 
 # Execute your favorite apps at launch
 exec-once = hyprpaper
-exec-once=$HOME/.config/hypr/autostart
+exec-once=$HOME/.config/hypr/scripts/autostart
 
 exec hyprctl keyword input: kb_layout us
 
@@ -44,7 +44,7 @@ general {
 
 decoration {
     blur_new_optimizations = on
-    rounding=15
+    rounding=10
     blur=1
     blur_size=1 # minimum 1
     blur_passes=2 # minimum 1, more passes = more resource intensive.
@@ -169,6 +169,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bindm = ALT, mouse:272, resizewindow
 
 # Fixes
 workspace=MIRROREDSCREEN,name:unused
