--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,7 +1,7 @@
-preload = /home/redneko/.config/backgrounds/1.jpg
+preload = /home/redneko/.config/hypr/backgrounds/1.png
 # .. more preloads
 
-wallpaper = eDP-1,/home/redneko/.config/backgrounds/1.jpg
+wallpaper = eDP-1,/home/redneko/.config/hypr/backgrounds/1.png
 
 # .. more monitors
 
