--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,1 +1,6 @@
-font_family Monocraft
+# BEGIN_KITTY_THEME
+# Rosé Pine
+include kitty-theme.conf
+# END_KITTY_THEME
+window_padding_width 15
+font_size 12
