--- a/config/waybar/config
+++ b/config/waybar/config
@@ -1,22 +1,15 @@
 {
     "layer": "top",
     "position": "top",
-    // "width": 1280, // Waybar width
-    //"spacing": 4, // Gaps between modules (4px)
-    "modules-left": ["hyprland/window"],
-    "modules-center": ["tray", "wlr/workspaces"],
-    "modules-right": ["pulseaudio", "network", "backlight", "hyprland/language", "cpu", "battery", "clock"],
+    // "width"': 1280, // Waybar width
+    "modules-left": ["clock", "tray"],
+    "modules-center": ["wlr/workspaces"],
+    "modules-right": ["battery", "custom/sep", "pulseaudio", "custom/sep", "cpu", "custom/sep", "hyprland/language","backlight", "network"],
      "wlr/workspaces": {
          "format": "{icon}",
          "format-icons": {
-             "1": "🌍",
-             "2": "🌠",
-             "3": "🎁",
-             "4": "💻",
-             "5": "💾",
-             "default": "🌐",
+             "default": "",
          },
-         "sort-by-number": true,
          "on-scroll-up": "hyprctl dispatch workspace e+1",
          "on-scroll-down": "hyprctl dispatch workspace e-1",
          "on-click": "activate",
@@ -33,24 +26,11 @@
         "icon-size": 21,
         "spacing": 10
     },
-    "hyprland/window": {
-        "format": "➡ {}",
-        "separate-outputs": true,
-        "max-length": 64,
-    },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
-        }
-    },
     "tray": {
         // "icon-size": 21,
         "spacing": 10
     },
     "clock": {
-        // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format-alt": "{:%Y-%m-%d}"
     },
@@ -58,81 +38,46 @@
         "format": " {usage}%",
         "tooltip": false
     },
-    "memory": {
-        "format": "{}% "
-    },
-    "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
-        "format": "{icon} {temperatureC}°C",
-        "format-icons": ["", "", ""]
-    },
     "backlight": {
-        // "device": "acpi_video0",
         "on-scroll-up": "light -A 12",
         "on-scroll-down": "light -U 12",
-        "format": "{percent}% {icon}",
-        "format-icons": ["", "", "", "", "", "", "", "", ""]
+        "format": "{icon}",
+        "format-icons": [" ", " ", " ", " "]
     },
     "battery": {
         "states": {
-            // "good": 95,
+            // "good": 80,
             "warning": 30,
             "critical": 15
         },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        "format-full": "{capacity}% 🚨",
+        "format": "{icon} {capacity}",
+        "format-charging": " {capacity}",
+        // "format-good": " {capacity}", // An empty format will hide the module
+        "format-full": "🚨",
         "format-icons": ["", "", "", "", ""]
     },
     "battery#bat2": {
         "bat": "BAT2"
     },
+    "custom/sep": {
+    	"format": "",
+    },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "  ({signalStrength}%)",
-        "format-ethernet": " {ipaddr}/{cidr}",
-        "tooltip-format": " {ifname} via {gwaddr}",
-        "format-linked": " {ifname} (No IP)",
-        "format-disconnected": "⚠ Disconnected",
+        "format-wifi": " ",
+        "format-ethernet": " {ipaddr}/{cidr}",
+        "format-disconnected": "睊 ",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
         "scroll-step": 5, // %, can be a float
-        "format": "{icon}  {volume}%   {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": "🔇 {icon} {format_source}",
-        "format-muted": "🔇 {format_source}",
-        "format-source": " {volume}%",
-        "format-source-muted": "",
+        "format": "{icon} {volume}",
+        "format-bluetooth": "{icon} {volume}",
+        "format-bluetooth-muted": " ",
+        "format-muted": " ",
         "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
+            "default": ["", "", " "]
         },
         "on-click": "pavucontrol"
     },
-    "custom/media": {
-        "format": "{icon} {}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
-    }
-}
-
-
+},
