--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,87 +1,79 @@
-monitor=eDP-1, 1920x1080, auto, 1
+# Monitor
+monitor = eDP-1, 1920x1080, auto, 1
 
-#FixSlow
-exec systemctl --user import-environment
-exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
+# Fix slow startup
+exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP 
+#SWAYSOCK
 
-# Execute your favorite apps at launch
+# Autostart
 exec-once = hyprpaper
-exec-once=$HOME/.config/hypr/scripts/autostart
+exec-once = $HOME/.config/hypr/scripts/autostart
 
+# Screensharing
+exec-once = $HOME/.config/hypr/scripts/screensharing
+
+# Set en layout at startup
 exec hyprctl keyword input: kb_layout us
 
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
+# Input config
 input {
     kb_layout=us,ru
     kb_options=grp:caps_toggle
-
-    #bind=SUPER,A,exec,hyprctl keyword input:kb_layout ru
-    #bind=SUPER,Cyrillic_ef,exec,hyprctl keyword input:kb_layout us 
-
     follow_mouse = 1
-
     touchpad {
         natural_scroll = yes
         disable_while_typing = yes
     }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0
 }
 
 general {
-    sensitivity=1.0 # for mouse cursor
-    main_mod=SUPER
+    sensitivity = 1.0
     
-    gaps_in=8
-    gaps_out=15
-    border_size=4
-    col.active_border=0xfff5c2e7
-    col.inactive_border=0xff45475a
-    apply_sens_to_raw=0 
+    gaps_in = 5
+    gaps_out = 12
+    border_size = 4
+    col.active_border = rgba(cba6f7ee) rgba(eba0acee) 45deg
+    col.inactive_border = 0xff45475a
+    apply_sens_to_raw = 0 
 }
 
 decoration {
-    blur_new_optimizations = on
-    rounding=10
-    blur=1
-    blur_size=1 # minimum 1
-    blur_passes=2 # minimum 1, more passes = more resource intensive.
-    # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
-    # if you want heavy blur, you need to up the blur_passes.
-    # the more passes, the more you can up the blur_size without noticing artifacts.
+    blur = yes
+    blur_new_optimizations = yes
+    blur_ignore_opacity = yes
+    blur_size = 10
+    blur_passes = 2
+
+    rounding = 10
+    drop_shadow = no
 }
 
 animations {
-    enabled=1
-    bezier=undershot,0.05,0.9,0.1,1
-    # bezier=overshot,0.13,0.99,0.29,1.1
-    animation=windows,1,4,undershot,slide
-    animation=border,1,10,default
-    animation=fade,1,10,default
-    animation=workspaces,1,6,undershot
+    enabled = yes
+
+    bezier = ease,0.4,0.02,0.21,1
+
+    animation = windows, 1, 3.5, ease, slide
+    animation = windowsOut, 1, 3.5, ease, slide
+    animation = border, 1, 6, default
+    animation = fade, 1, 3, ease
+    animation = workspaces, 1, 3.5, ease
 }
 
 dwindle {
-    pseudotile=1 # enable pseudotiling on dwindle
-    force_split=0
-    col.group_border=0xff89dceb
-    col.group_border_active=0xfff9e2af
+    pseudotile = yes
+    preserve_split = yes
 }
 
 master {
-
+    new_is_master = yes
 }
 
 gestures {
     workspace_swipe = on
-    workspace_swipe_distance = 200
-}
-
-# Example per-device config
-device:epic mouse V1 {
-    sensitivity = -0.5
+    workspace_swipe_distance = 300
 }
 
 # Example windowrule v1
@@ -90,13 +82,18 @@ device:epic mouse V1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrule=float,^(kitty)$
+windowrule=float,^(pavucontrol)$
+windowrule=center,^(kitty)$
 windowrule=float,^(blueman-manager)$
 windowrule=size 1000 650,^(kitty)$
-windowrule=pin,^(firefox)$
+windowrule=size 934 525,^(mpv)$
+windowrule=float,^(mpv)$
+windowrule=center,^(mpv)$
+#windowrule=pin,^(firefox)$
 
 $mainMod = SUPER
 
-bind = $mainMod, RETURN, exec, kitty -e fish
+bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, E, exit, 
 bind = $mainMod, F, togglefloating,
@@ -104,6 +101,7 @@ bind = $mainMod, G, fullscreen,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, W, exec, killall hyprpaper && exec hyprpaper
 
 # Binds in cyrillic layout
 bind = $mainMod, Cyrillic_ye, killactive, 
