--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -12,6 +12,8 @@ exec-once = $HOME/.config/hypr/scripts/autostart
 # Screensharing
 exec-once = $HOME/.config/hypr/scripts/screensharing
 
+source = /home/redneko/.config/hypr/colors
+
 # Set en layout at startup
 exec hyprctl keyword input: kb_layout us
 
@@ -33,15 +35,15 @@ general {
     gaps_in = 5
     gaps_out = 12
     border_size = 4
-    col.active_border = rgba(cba6f7ee) rgba(eba0acee) 45deg
-    col.inactive_border = 0xff45475a
+    col.active_border = $foreground # $color6 45deg
+    col.inactive_border = $color0
     apply_sens_to_raw = 0 
 }
 
 decoration {
     blur = yes
     blur_new_optimizations = yes
-    blur_ignore_opacity = yes
+    blur_ignore_opacity = no
     blur_size = 10
     blur_passes = 2
 
@@ -84,7 +86,7 @@ windowrule=float,^(kitty)$
 windowrule=float,^(pavucontrol)$
 windowrule=center,^(kitty)$
 windowrule=float,^(blueman-manager)$
-windowrule=size 1000 650,^(kitty)$
+windowrule=size 1040 670,^(kitty)$
 windowrule=size 934 525,^(mpv)$
 windowrule=float,^(mpv)$
 windowrule=center,^(mpv)$
@@ -100,7 +102,7 @@ bind = $mainMod, G, fullscreen,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod SHIFT, W, exec, killall hyprpaper && exec hyprpaper
+bind = $mainMod SHIFT, W, exec, $HOME/.config/hypr/scripts/wallpaper
 
 # Binds in cyrillic layout
 bind = $mainMod, Cyrillic_ye, killactive, 
