--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,8 +1,3 @@
-preload = /home/redneko/.config/hypr/backgrounds/1.png
-# .. more preloads
-
-wallpaper = eDP-1,/home/redneko/.config/hypr/backgrounds/1.png
-
-# .. more monitors
-
+preload = /home/redneko/.config/wallpapers/current/SU_Zoom_BG67.jpg
+wallpaper = eDP-1,/home/redneko/.config/wallpapers/current/SU_Zoom_BG67.jpg
 ipc = off
