--- a/config/kitty/kitty-theme.conf
+++ b/config/kitty/kitty-theme.conf
@@ -1,84 +1,21 @@
-# vim:ft=kitty
+foreground   #c3dde7
+background   #1d192b
+cursor       #c3dde7
 
-## name: Catppuccin
-## author: Pocco81 (https://github.com/Pocco81)
-## license: MIT
-## upstream: https://raw.githubusercontent.com/catppuccin/kitty/main/catppuccin.conf
-## blurb: Soothing pastel theme for the high-spirited!
-
-# The basic colors
-foreground              #E2E0EC
-background              #0B0A10
-selection_foreground    #D9E0EE
-selection_background    #575268
-
-# Transparent Background
+color0       #1d192b
+color8       #889aa1
+color1       #465EA7
+color9       #465EA7
+color2       #5A89B6
+color10      #5A89B6
+color3       #6296CA
+color11      #6296CA
+color4       #73B3D4
+color12      #73B3D4
+color5       #7BC7DD
+color13      #7BC7DD
+color6       #9CB4E3
+color14      #9CB4E3
+color7       #c3dde7
+color15      #c3dde7
 background_opacity 0.85
-
-# Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
-
-# URL underline color when hovering with mouse
-url_color               #F5E0DC
-
-# kitty window border colors
-active_border_color     #C9CBFF
-inactive_border_color   #575268
-bell_border_color       #FAE3B0
-
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
-
-#: Tab bar colors
-active_tab_foreground   #F5C2E7
-active_tab_background   #575268
-inactive_tab_foreground #D9E0EE
-inactive_tab_background #1E1E2E
-tab_bar_background      #161320
-
-# Colors for marks (marked text in the terminal)
-
-mark1_foreground #1E1E2E
-mark1_background #96CDFB
-mark2_foreground #1E1E2E
-mark2_background #F5C2E7
-mark3_foreground #1E1E2E
-mark3_background #B5E8E0
-
-#: The 16 terminal colors
-
-#: black
-color0 #2B273F
-color8 #61588E
-
-#: red
-color1 #E97193
-color9 #E97193
-
-#: green
-color2  #AAC5A0
-color10 #AAC5A0
-
-#: yellow
-color3  #ECE0A8
-color11 #ECE0A8
-
-#: blue
-color4  #A8C5E6
-color12 #A8C5E6
-
-#: magenta
-color5  #DFA7E7
-color13 #DFA7E7
-
-#: cyan
-color6  #A8E5E6
-color14 #A8E5E6
-
-#: white
-color7  #E2E0EC
-color15 #E2E0EC
-
-#*/
